[tool.poetry]
name = "ceviche"
version = "0.1.0"
description = "Authentication service built in Python"
authors = ["Axel Rodríguez Chang <edgysquirrel@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
