[tool.poetry]
name = "ceviche"
version = "0.1.0"
description = "Authentication service built in Python"
authors = ["Axel Rodríguez Chang <edgysquirrel@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
asyncpg = "^0.24.0"
psycopg2 = "^2.9.1"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
